--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -17,5 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --features all --verbose
+
+      # Run automated tests but ignore doc examples
       - name: Run tests
-        run: cargo test --features all --verbose
+        run: cargo test --tests --features all --verbose
